feat: add swagger to method GetByTransactionID
